practice/conf-po.yml
apiVersion: v1
kind: Pod
metadata:
  name: conf-pod
spec:
  containers:
    - name: alpine
      image: alpine
