practice/pv-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: pv-pod
  namespace: myvol
spec:
  containers:
    - name: myfrontend
      image: nginx
      volumeMounts:
      - mountPath: "/var/www/html"
        name: mypd
  volumes:
    - name: mypd
      persistentVolumeClaim:
        claimName: my-pvc
